Update messaging around bitrates / resolution
Allow for higher bitrates, but still recommend transcode over 8mbps until we have transcode on upload.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -874,7 +874,7 @@
   "Sorry, your request timed out. Modify your options or %again%": "Sorry, your request timed out. Modify your options or %again%",
   "Sorry, your request timed out. Try refreshing in a bit.": "Sorry, your request timed out. Try refreshing in a bit.",
   "Pause at any time to select a thumbnail from your video": "Pause at any time to select a thumbnail from your video",
-  "For video content, use MP4s in H264/AAC format and a friendly bitrate (under 5 Mbps) and resolution (720p) for more reliable streaming. %SITE_NAME% uploads are restricted to %limit% GB.": "For video content, use MP4s in H264/AAC format and a friendly bitrate (under 5 Mbps) and resolution (720p) for more reliable streaming. %SITE_NAME% uploads are restricted to %limit% GB.",
+  "For video content, use MP4s in H264/AAC format and a friendly bitrate (under 8 Mbps) for more reliable streaming. %SITE_NAME% uploads are restricted to %limit% GB.": "For video content, use MP4s in H264/AAC format and a friendly bitrate (under 8 Mbps) for more reliable streaming. %SITE_NAME% uploads are restricted to %limit% GB.",
   "Share this channel": "Share this channel",
   "File preview": "File preview",
   "Go Home": "Go Home",
@@ -969,10 +969,9 @@
   "We've followed your invitee for you. Check them out!": "We've followed your invitee for you. Check them out!",
   "Congrats": "Congrats",
   "Transcoding this %size% MB file should take under %processTime% %units%.": "Transcoding this %size% MB file should take under %processTime% %units%.",
-  "For video content, use MP4s in H264/AAC format and a friendly bitrate (under 5 Mbps) and resolution (720p) for more reliable streaming.": "For video content, use MP4s in H264/AAC format and a friendly bitrate (under 5 Mbps) and resolution (720p) for more reliable streaming.",
-  "Your video may not be the best format. Use MP4s in H264/AAC format and a friendly bitrate (under 5 Mbps) and resolution (720p) for more reliable streaming.": "Your video may not be the best format. Use MP4s in H264/AAC format and a friendly bitrate (under 5 Mbps) and resolution (720p) for more reliable streaming.",
-  "Your video has a bitrate over 5 Mbps. We suggest transcoding to provide viewers the best experience.": "Your video has a bitrate over 5 Mbps. We suggest transcoding to provide viewers the best experience.",
-  "Your video has a bitrate over ~12 Mbps and cannot be processed at this time. We suggest transcoding to provide viewers the best experience.": "Your video has a bitrate over ~12 Mbps and cannot be processed at this time. We suggest transcoding to provide viewers the best experience.",
+  "Your video may not be the best format. Use MP4s in H264/AAC format and a friendly bitrate (under 8 Mbps) for more reliable streaming.": "Your video may not be the best format. Use MP4s in H264/AAC format and a friendly bitrate (under 8 Mbps) for more reliable streaming.",
+  "Your video has a bitrate over 8 Mbps. We suggest transcoding to provide viewers the best experience.": "Your video has a bitrate over 8 Mbps. We suggest transcoding to provide viewers the best experience.",
+  "Your video has a bitrate over ~16 Mbps and cannot be processed at this time. We suggest transcoding to provide viewers the best experience.": "Your video has a bitrate over ~16 Mbps and cannot be processed at this time. We suggest transcoding to provide viewers the best experience.",
   "Bitrate is over the max, please transcode or choose another file.": "Bitrate is over the max, please transcode or choose another file.",
   "seconds": "seconds",
   "second": "second",
