--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,9 @@
   "parser": "babel-eslint",
   "extends": ["standard", "standard-jsx", "plugin:react/recommended", "plugin:flowtype/recommended"],
   "plugins": ["flowtype", "import", "react-hooks"],
+  "parserOptions": {
+    "ecmaVersion": 2020
+  },
   "env": {
     "browser": true,
     "node": true
@@ -22,7 +25,13 @@
   "rules": {
     "brace-style": 0,
     "camelcase": 0,
-    "comma-dangle": ["error", "always-multiline"],
+    "comma-dangle": ["error", {
+      "arrays": "always-multiline",
+      "objects": "always-multiline",
+      "imports": "always-multiline",
+      "exports": "always-multiline",
+      "functions": "never"
+    }],
     "handle-callback-err": 0,
     "indent": 0,
     "jsx-quotes": ["error", "prefer-double"],
