--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -108,7 +108,6 @@
   "Enter a URL for your thumbnail.": "Enter a URL for your thumbnail.",
   "Thumbnail Preview": "Thumbnail Preview",
   "Use thumbnail upload tool": "Use thumbnail upload tool",
-  "Create a URL for this content. Simpler names are easier to find and remember.": "Create a URL for this content. Simpler names are easier to find and remember.",
   "Open file": "Open file",
   "Delete": "Delete",
   "You have...": "You have...",
@@ -408,6 +407,7 @@
   "Top": "Top",
   "New": "New",
   "New --[clears Publish Form]--": "New",
+  "Clear --[clears Publish Form]--": "Clear",
   "Loading": "Loading",
   "This file is in your library.": "This file is in your library.",
   "Invalid claim ID %s.": "Invalid claim ID %s.",
@@ -568,7 +568,6 @@
   "Submit Feedback": "Submit Feedback",
   "Checking your uploads": "Checking your uploads",
   "Checking for channels": "Checking for channels",
-  "An upgrade is available.": "An upgrade is available.",
   "New Channel": "New Channel",
   "ChannelName": "ChannelName",
   "Analytics": "Analytics",
@@ -639,8 +638,6 @@
   "Abandon on blockchain (reclaim %lbc%)": "Abandon on blockchain (reclaim %lbc%)",
   "This will increase the overall bid amount for this content, which will boost its ability to be discovered while active.": "This will increase the overall bid amount for this content, which will boost its ability to be discovered while active.",
   "Show this channel your appreciation by sending a donation.": "Show this channel your appreciation by sending a donation.",
-  "Reply": "Reply",
-  "Replying...": "Replying...",
   "refreshing the app": "refreshing the app",
   "Follower": "Follower",
   "%anonymous% Reposted": "%anonymous% Reposted",
@@ -662,7 +659,6 @@
   "Official YouTube Creator": "Official YouTube Creator",
   "YouTube Sync": "YouTube Sync",
   "Last checked %time_ago%": "Last checked %time_ago%",
-  "Install Now": "Install Now",
   "Invite Link": "Invite Link",
   "Earn %lbc% for inviting subscribers, followers, fans, friends, etc. to join and follow you on %SITE_NAME%. You can use invites just like affiliate links.": "Earn %lbc% for inviting subscribers, followers, fans, friends, etc. to join and follow you on %SITE_NAME%. You can use invites just like affiliate links.",
   "Your invite link": "Your invite link",
@@ -1346,6 +1342,16 @@
   "Controversial": "Controversial",
   "Show Replies": "Show Replies",
   "Hide replies": "Hide replies",
+  "Loading Replies": "Loading Replies",
+  "Loading Reply": "Loading Reply",
+  "Commenting...": "Commenting...",
+  "Reply": "Reply",
+  "Replying...": "Replying...",
+  "Continue Thread": "Continue Thread",
+  "View all comments": "View all comments",
+  "Show parent comments": "Show parent comments",
+  "Show reply": "Show reply",
+  "Show %count% replies": "Show %count% replies",
   "Unable to comment. This channel has blocked you.": "Unable to comment. This channel has blocked you.",
   "Unable to comment. Your channel has been blocked by an admin.": "Unable to comment. Your channel has been blocked by an admin.",
   "Unable to comment. The content owner has disabled comments.": "Unable to comment. The content owner has disabled comments.",
@@ -1573,6 +1579,7 @@
   "Sign up for full control": "Sign up for full control",
   "Unlock new buttons that change things.": "Unlock new buttons that change things.",
   "Content to repost": "Content to repost",
+  "Open Repost in new tab": "Open Repost in new tab",
   "Enter a name or %domain% URL": "Enter a name or %domain% URL",
   "Winning amount: %amount%": "Winning amount: %amount%",
   "Download or get the app": "Download or get the app",
@@ -2025,9 +2032,6 @@
   "The payment will be made from your saved card": "The payment will be made from your saved card",
   "When you begin to receive tips your balance will be updated here.": "When you begin to receive tips your balance will be updated here.",
   "This is your pending balance that will be automatically sent to your bank account.": "This is your pending balance that will be automatically sent to your bank account.",
-  "Commenting...": "Commenting...",
-  "Show %count% replies": "Show %count% replies",
-  "Show reply": "Show reply",
   "Skip Navigation": "Skip Navigation",
   "Reset": "Reset",
   "Reset to original (previous) publish date": "Reset to original (previous) publish date",
@@ -2279,5 +2283,10 @@
   "Homepage restored to default.": "Homepage restored to default.",
   "The transaction timed out, but may have been completed. Please wait a few minutes, then check your wallet transactions before attempting to retry.": "The transaction timed out, but may have been completed. Please wait a few minutes, then check your wallet transactions before attempting to retry.",
   "The transaction timed out, but may have been completed. Please wait a few minutes, then check your wallet transactions before attempting to retry. Note that due to current limitations, we are unable to re-link the tip sent to a new comment.": "The transaction timed out, but may have been completed. Please wait a few minutes, then check your wallet transactions before attempting to retry. Note that due to current limitations, we are unable to re-link the tip sent to a new comment.",
+  "Click Check for Replays to update...": "Click Check for Replays to update...",
+  "Embedded Latest Video Content": "Embedded Latest Video Content",
+  "Embedded Current Livestream": "Embedded Current Livestream",
+  "Latest Content Link": "Latest Content Link",
+  "Current Livestream Link": "Current Livestream Link",
   "--end--": "--end--"
 }
