Add missing app string

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2288,5 +2288,6 @@
   "Embedded Current Livestream": "Embedded Current Livestream",
   "Latest Content Link": "Latest Content Link",
   "Current Livestream Link": "Current Livestream Link",
+  "Back to Odysee Premium": "Back to Odysee Premium",
   "--end--": "--end--"
 }
