Notification-popup patch
- Rename components per filename changes.
- Fix missing React key.
- Add new strings.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1289,6 +1289,7 @@
   "No notifications": "No notifications",
   "Try selecting another filter.": "Try selecting another filter.",
   "You don't have any notifications yet, but they will be here when you do!": "You don't have any notifications yet, but they will be here when you do!",
+  "View all": "View all",
   "I like this": "I like this",
   "I dislike this": "I dislike this",
   "Not interested": "Not interested",
