--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lbry",
-  "version": "0.53.4",
+  "version": "0.53.5-t109",
   "description": "A browser for the LBRY network, a digital marketplace controlled by its users.",
   "keywords": [
     "lbry"
@@ -238,10 +238,11 @@
     "yarn": "^1.3"
   },
   "lbrySettings": {
-    "lbrynetDaemonVersion": "0.107.2",
+    "lbrynetDaemonVersion": "0.109.0",
     "lbrynetDaemonUrlTemplate": "https://github.com/lbryio/lbry/releases/download/vDAEMONVER/lbrynet-OSNAME.zip",
     "lbrynetDaemonDir": "static/daemon",
     "lbrynetDaemonFileName": "lbrynet"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.0",
+  "stableVersion": "0.53.4"
 }
