GoogleVideo: generate instead of fetch the content url (#1691)
Seeing performance issues.

--- a/.env.defaults
+++ b/.env.defaults
@@ -29,6 +29,7 @@ THUMBNAIL_WIDTH=390
 THUMBNAIL_WIDTH_MOBILE=900
 THUMBNAIL_QUALITY=85
 THUMBNAIL_CDN_SIZE_LIMIT_BYTES=5242880
+PLAYER_SERVER=https://player.odycdn.com
 WELCOME_VERSION=1.0
 
 # --- Stripe ---
