Non-English homepage strings

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1258,8 +1258,10 @@
   "Invite": "Invite",
   "Remove File": "Remove File",
   "Artists": "Artists",
+  "Bit Hits": "Bit Hits",
   "Education": "Education",
   "Enlightenment": "Enlightenment",
+  "Entertainment": "Entertainment",
   "Featured": "Featured",
   "Finance 2.0": "Finance 2.0",
   "Game": "Game",
