Str and cleanup

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -344,6 +344,7 @@
   "Today": "Today",
   "All time": "All time",
   "Share on Reddit": "Share on Reddit",
+  "Share on WhatsApp": "Share on WhatsApp",
   "Share on Facebook": "Share on Facebook",
   "Share on Twitter": "Share on Twitter",
   "Share on Telegram": "Share on Telegram",
@@ -1478,7 +1479,7 @@
   "how the program works": "how the program works",
   "Claim Now": "Claim Now",
   "I want to sync my content to %site_name% and the LBRY network and agree to %terms%. I have also read and understand %faq%.": "I want to sync my content to %site_name% and the LBRY network and agree to %terms%. I have also read and understand %faq%.",
-  "This will verify you are an active YouTuber with over 300 subscribers and original content. Channel names cannot be changed once chosen, please be extra careful. %learn_more%.": "This will verify you are an active YouTuber with over 300 subscribers and original content. Channel names cannot be changed once chosen, please be extra careful. %learn_more%.",
+  "This will verify you are an active YouTuber with over %count% subscribers and original content. Channel names cannot be changed once chosen, please be extra careful. %learn_more%.": "This will verify you are an active YouTuber with over %count% subscribers and original content. Channel names cannot be changed once chosen, please be extra careful. %learn_more%.",
   "Invite sent to %email%": "Invite sent to %email%",
   "Log in to reply": "Log in to reply",
   "Coveted Creator L9: Whoa Baby!": "Coveted Creator L9: Whoa Baby!",
@@ -2017,6 +2018,8 @@
   "Connect your bank account to Odysee to receive donations directly from users": "Connect your bank account to Odysee to receive donations directly from users",
   "Connect your bank account": "Connect your bank account",
   "Please enter the name on the card": "Please enter the name on the card",
+  "Special characters and numbers are not allowed:": "Special characters and numbers are not allowed",
+  "Name must be less than 48 characters long": "Name must be less than 48 characters long",
   "Name on card": "Name on card",
   "Manage Card": "Manage Card",
   "Card details": "Card details",
