`PublishReleaseTime` widget improvements (#1740)
* PublishReleaseDate: improve calendar error handling

Ticket: 1738

- Report invalid `minute` and `day`. The 3rd-party widget auto-corrects the other fields. Don't think there is a way to make it autocorrect for all.
- Report invalid range (cannot set to future date).

* Block form on releaseDate error instead of silently sending last valid value

which does not tally with what's on screen.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1939,6 +1939,8 @@
   "Release date": "Release date",
   "Scheduled for": "Scheduled for",
   "Set custom release date": "Set custom release date",
+  "Cannot set to a future date.": "Cannot set to a future date.",
+  "Invalid date/time.": "Invalid date/time.",
   "Now": "Now",
   "Set to current date and time": "Set to current date and time",
   "Remove custom release date": "Remove custom release date",
