remove reward/verify components

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2314,5 +2314,6 @@
   "Apply": "Apply",
   "24-hour clock": "24-hour clock",
   "Disable background": "Disable background",
+  "Odysee Connect --[Section in Help Page]--": "Odysee Connect",
   "--end--": "--end--"
 }
