remove reward/verify components

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2315,5 +2315,6 @@
   "Disable background": "Disable background",
   "Installing, please wait...": "Installing, please wait...",
   "There was an error during installation. Please, try again.": "There was an error during installation. Please, try again.",
+  "Odysee Connect --[Section in Help Page]--": "Odysee Connect",
   "--end--": "--end--"
 }
