Added checkbox to enable/disable background

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2312,5 +2312,7 @@
   "Free --[legend, unused disk space]--": "Free",
   "Top content in %language%": "Top content in %language%",
   "Apply": "Apply",
+  "24-hour clockss": "24-hour clockss",
+  "background": "background",
   "--end--": "--end--"
 }
