--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lbry",
-  "version": "0.53.5-alpha.test7495a2",
+  "version": "0.53.5-alpha.test7495b2",
   "description": "A browser for the LBRY network, a digital marketplace controlled by its users.",
   "keywords": [
     "lbry"
