bug fix in enable disable button

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2314,5 +2314,6 @@
   "Apply": "Apply",
   "24-hour clockss": "24-hour clockss",
   "background": "background",
+  "Disable background": "Disable background",
   "--end--": "--end--"
 }
