--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2312,5 +2312,7 @@
   "Free --[legend, unused disk space]--": "Free",
   "Top content in %language%": "Top content in %language%",
   "Apply": "Apply",
+  "24-hour clock": "24-hour clock",
+  "Disable background": "Disable background",
   "--end--": "--end--"
 }
