tus: don't allow 'notify' to be sent again (#1778)
## Ticket
725

## Issue
Upload a video. When `notify` is sent at the end of the tus upload, refresh immediately. The GUI allowed the user to resume the upload, but the ID is no longer present in the server.

## Approach
Until the polling API for `notify` is available, we can only assume the best and let the user know how to handle it.
- Store the "notify was sent" state.
- Show a dialog explaining the situation.

Thought of trying to make `claim_list` calls behind the scenes to clear itself, but it doesn't handle the case of `notify` actually failing. The best is to just let the user handle it for now.

Note that for the case of `onerror` actually received, we still retry since a network error could be the culprit (`notify` wasn't sent).

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1147,6 +1147,13 @@
   "Stopped. Duplicate session detected.": "Stopped. Duplicate session detected.",
   "File being uploaded in another tab or window.": "File being uploaded in another tab or window.",
   "There are pending uploads.": "There are pending uploads.",
+  "Processing file. Please wait...": "Processing file. Please wait...",
+  "File uploaded to server.": "File uploaded to server.",
+  "Remove entry?": "Remove entry?",
+  "The file was successfully uploaded, but we could not retrieve the confirmation status.": "The file was successfully uploaded, but we could not retrieve the confirmation status.",
+  "Wait 5-10 minutes, then refresh and check the Uploads list and Wallet transactions before attempting to re-upload.": "Wait 5-10 minutes, then refresh and check the Uploads list and Wallet transactions before attempting to re-upload.",
+  "This entry can be safely removed if the transaction is visible in those pages.": "This entry can be safely removed if the transaction is visible in those pages.",
+  "Press OK to clear this entry from the \"Currently Uploading\" list.": "Press OK to clear this entry from the \"Currently Uploading\" list.",
   "Use a URL": "Use a URL",
   "Edit Cover Image": "Edit Cover Image",
   "Cover Image": "Cover Image",
