--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -410,7 +410,7 @@
   "Clear --[clears Publish Form]--": "Clear",
   "Loading": "Loading",
   "This file is in your library.": "This file is in your library.",
-  "Invalid claim ID %s.": "Invalid claim ID %s.",
+  "Invalid claim ID": "Invalid claim ID",
   "View Tag": "View Tag",
   "Hide": "Hide",
   "Close": "Close",
