(patch) Don't nudge to refresh in localhost
d16ae73c

## Issue
dev instances are also affected.

## Change
Use another env to enable the feature.

The cleaner solution that avoids the double env is to simply not make MIN_VERSION appear in the default file + define only in production instances. But putting it in the default file makes things clearer, plus easier to "bump + build" by just pushing a new commit.

--- a/.env.defaults
+++ b/.env.defaults
@@ -6,6 +6,9 @@
 # Bump this when we want to nudge the user to refresh.
 MINIMUM_VERSION=20220708001
 
+# This is 'false' in the production instances:
+IGNORE_MINIMUM_VERSION=true
+
 # --- Base config ---
 WEBPACK_WEB_PORT=9090
 WEBPACK_ELECTRON_PORT=9091
