ReportContent: add `?commentId` support (#1826)
## Ticket
1822

## Changes
- Add `?commentId=` support in the URL.
- `claimId` remains a required parameter so that we can derive the comment URL.
    - The backend will know it's a comment report when both parameters are present.
- The comment URL is added to the top of `additional_details`.
- The backend rejects if `additional_details` is provided for DMCA. Grayed out DMCA for the case of reporting comments.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -31,6 +31,7 @@
   "Loop": "Loop",
   "Report content": "Report content",
   "Report Content": "Report Content",
+  "Report comment": "Report comment",
   "Languages": "Languages",
   "Media Type": "Media Type",
   "License": "License",
@@ -411,6 +412,8 @@
   "Loading": "Loading",
   "This file is in your library.": "This file is in your library.",
   "Invalid claim ID": "Invalid claim ID",
+  "Invalid comment ID": "Invalid comment ID",
+  "Missing 'claimId' parameter.": "Missing 'claimId' parameter.",
   "View Tag": "View Tag",
   "Hide": "Hide",
   "Close": "Close",
