--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -91,7 +91,7 @@
   "Thai": "Thai",
   "Turkish": "Turkish",
   "Vietnamese": "Vietnamese",
-  "By continuing, you accept the %lbry_terms_of_service%.": "By continuing, you accept the %lbry_terms_of_service%.",
+  "By continuing, you accept the %odysee_terms_of_service% and %odysee_community_guidelines%.": "By continuing, you accept the %odysee_terms_of_service% and %odysee_community_guidelines%.",
   "Enter a thumbnail URL": "Enter a thumbnail URL",
   "Anonymous": "Anonymous",
   "These LBRY Credits remain yours and the deposit can be undone at any time.": "These LBRY Credits remain yours and the deposit can be undone at any time.",
@@ -1080,6 +1080,7 @@
   "Boost This Video": "Boost This Video",
   "Boost This %claimTypeText%": "Boost This %claimTypeText%",
   "Boost Your %claimTypeText%": "Boost Your %claimTypeText%",
+  "Boost Your List": "Boost Your List",
   "Tip This %claimTypeText%": "Tip This %claimTypeText%",
   "Send a %amount% tip": "Send a %amount% tip",
   "Boost": "Boost",
@@ -1101,6 +1102,7 @@
   "Download the app to track files you've viewed and downloaded.": "Download the app to track files you've viewed and downloaded.",
   "Create a new channel": "Create a new channel",
   "Go Live": "Go Live",
+  "Go live": "Go live",
   "Thumbnail source": "Thumbnail source",
   "Cover source": "Cover source",
   "Your changes will be live in a few minutes": "Your changes will be live in a few minutes",
@@ -1142,13 +1144,17 @@
   "This field cannot be changed.": "This field cannot be changed.",
   "Delete Channel": "Delete Channel",
   "Edit Thumbnail Image": "Edit Thumbnail Image",
-  "Choose image": "Choose image",
-  "%image_type%  %recommended_ratio%": "%image_type%  %recommended_ratio%",
-  "%label% • File to upload": "%label% • File to upload",
-  "Video file": "Video file",
-  "Select video or audio file to upload": "Select video or audio file to upload",
+  "Select video, audio or image file to upload": "Select video, audio or image file to upload",
   "Select a file to upload": "Select a file to upload",
-  "Select file to upload": "Select file to upload",
+  "Upload a file": "Upload a file",
+  "Upload a File to Odysee": "Upload a File to Odysee",
+  "Edit Upload": "Edit Upload",
+  "Post an Article on Odysee": "Post an Article on Odysee",
+  "Post an article": "Post an article",
+  "Post": "Post",
+  "Edit post": "Edit post",
+  "Would you like to publish a %livestream_replay_instead%?": "Would you like to publish a %livestream_replay_instead%?",
+  "Livestream Replay instead": "Livestream Replay instead",
   "Url copied.": "Url copied.",
   "Failed to initiate upload (%err%)": "Failed to initiate upload (%err%)",
   "Invalid file": "Invalid file",
@@ -1285,6 +1291,7 @@
   "Remove File": "Remove File",
   "Artists": "Artists",
   "Bit Hits": "Bit Hits",
+  "Comedy": "Comedy",
   "Education": "Education",
   "Enlightenment": "Enlightenment",
   "Entertainment": "Entertainment",
@@ -2341,5 +2348,41 @@
   "Support this content": "Support this content",
   "Repost this content": "Repost this content",
   "Share this content": "Share this content",
+  "Meta": "Meta",
+  "Created at": "Created at",
+  "Current page items: from %initial_page_item% to %last_page_item% of %total% total": "Current page items: from %initial_page_item% to %last_page_item% of %total% total",
+  "Arrange": "Arrange",
+  "Close Playlist": "Close Playlist",
+  "Scroll to Playing": "Scroll to Playing",
+  "Close Player": "Close Player",
+  "Are you sure you want to close the player and clear the current Queue?": "Are you sure you want to close the player and clear the current Queue?",
+  "Save to...": "Save to...",
+  "Added to %playlist_name%": "Added to %playlist_name%",
+  "Added to test-mature": "Added to test-mature",
+  "%firstAction% / %secondAction%": "%firstAction% / %secondAction%",
+  "Deleted content": "Deleted content",
+  "Added to Watch Later": "Added to Watch Later",
+  "%firstAction%": "%firstAction%",
+  "%action% %collection%": "%action% %collection%",
+  "This won't be able to be changed in the future.": "This won't be able to be changed in the future.",
+  "Thumbnail (Optional)": "Thumbnail (Optional)",
+  "Publish Updates": "Publish Updates",
+  "Skipping mature content in %seconds_left% seconds...": "Skipping mature content in %seconds_left% seconds...",
+  "Loop is on.": "Loop is on.",
+  "Shuffle is on.": "Shuffle is on.",
+  "You will be able to add content to this playlist using the Save button while viewing content.": "You will be able to add content to this playlist using the Save button while viewing content.",
+  "New Playlist Title": "New Playlist Title",
+  "Successfully created \"%playlist_name%\"": "Successfully created \"%playlist_name%\"",
+  "Confirm Playlist Unpublish": "Confirm Playlist Unpublish",
+  "Creation Time": "Creation Time",
+  "Updated Time": "Updated Time",
+  "Order By": "Order By",
+  "A-Z": "A-Z",
+  "Z-A": "Z-A",
+  "Increasing": "Increasing",
+  "Decreasing": "Decreasing",
+  "Removed from %playlist_name%": "Removed from %playlist_name%",
+  "Are you sure you want to quit and clear the current Queue?": "Are you sure you want to quit and clear the current Queue?",
+  "The current video will keep playing.": "The current video will keep playing.",
   "--end--": "--end--"
 }
