--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2384,5 +2384,6 @@
   "Removed from %playlist_name%": "Removed from %playlist_name%",
   "Are you sure you want to quit and clear the current Queue?": "Are you sure you want to quit and clear the current Queue?",
   "The current video will keep playing.": "The current video will keep playing.",
+  "Error uploading chunk. Click \"retry\" in the Uploads page to resume upload.": "Error uploading chunk. Click \"retry\" in the Uploads page to resume upload.",
   "--end--": "--end--"
 }
