--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1306,6 +1306,7 @@
   "News & Politics": "News & Politics",
   "News": "News",
   "Pop Culture": "Pop Culture",
+  "Rabbit Hole": "Rabbit Hole",
   "Sports": "Sports",
   "Tech": "Tech",
   "Technology": "Technology",
@@ -1990,6 +1991,7 @@
   "Delete Playlist": "Delete Playlist",
   "Private": "Private",
   "Public": "Public",
+  "Edited": "Edited",
   "View List": "View List",
   "View Playlist": "View Playlist",
   "Publish List": "Publish List",
@@ -2386,5 +2388,15 @@
   "Added to saved Playlists!": "Added to saved Playlists!",
   "Removed from saved Playlists.": "Removed from saved Playlists.",
   "%copied_playlist_name% (copy)": "%copied_playlist_name% (copy)",
+  "Copy Playlist": "Copy Playlist",
+  "The copied playlist will be private and you will be able to edit its contents at any time.": "The copied playlist will be private and you will be able to edit its contents at any time.",
+  "View Page": "View Page",
+  "This playlist has no items.": "This playlist has no items.",
+  "After submitting, all changes will remain private.": "After submitting, all changes will remain private.",
+  "(Published playlist with pending changes)": "(Published playlist with pending changes)",
+  "Published count: %published_count%, edited count: %edited_count%": "Published count: %published_count%, edited count: %edited_count%",
+  "Clear Updates": "Clear Updates",
+  "Delete all edits from this published playlist": "Delete all edits from this published playlist",
+  "Are you sure you want to delete all edits from this published playlist? (You won't be able to undo this action later)": "Are you sure you want to delete all edits from this published playlist? (You won't be able to undo this action later)",
   "--end--": "--end--"
 }
