Don't show zero stats while fetching
## Issue
Sub count, view count and reactions are incorrectly showing "0" briefly, or stuck there if the fetch fails.

## Reason
Selectors defaulting to 0.

## Change
(1) Apply placeholders or simply not show it (depending on which looks best for each scenario).

(2) To reduce layout shifts, swapped the location of "#uploads" vs "# followers" since the former will always be populated.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -880,7 +880,6 @@
   "No stats found": "No stats found",
   "Sorry about that. Contact %SITE_HELP_EMAIL% if you continue to have issues.": "Sorry about that. Contact %SITE_HELP_EMAIL% if you continue to have issues.",
   "You are not able to see this channel's stats. Make sure you are signed in with the correct email and have data sharing turned on.": "You are not able to see this channel's stats. Make sure you are signed in with the correct email and have data sharing turned on.",
-  "%follower_count% followers": "%follower_count% followers",
   "Sign Up": "Sign Up",
   "Add A Password": "Add A Password",
   "Hide reposts": "Hide reposts",
@@ -1364,7 +1363,6 @@
   "Replying as": "Replying as",
   "No uploads": "No uploads",
   "No Reposts": "No Reposts",
-  "uploads": "uploads",
   "Staked LBRY Credits": "Staked LBRY Credits",
   "1 comment": "1 comment",
   "%total_comments% comments": "%total_comments% comments",
@@ -2096,8 +2094,10 @@
   "%title% by %channelTitle% %ariaDate%, %mediaDuration%": "%title% by %channelTitle% %ariaDate%, %mediaDuration%",
   "Collapse": "Collapse",
   "Expand": "Expand",
-  "%formattedSubCount% Followers": "%formattedSubCount% Followers",
-  "1 Follower": "1 Follower",
+  "1 follower": "1 follower",
+  "%count% followers": "%count% followers",
+  "1 upload": "1 upload",
+  "%count% uploads": "%count% uploads",
   "Collection": "Collection",
   "%channelName% isn't live right now, but the chat is! Check back later to watch the stream.": "%channelName% isn't live right now, but the chat is! Check back later to watch the stream.",
   "Review": "Review",
