Fix preorder string issues

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2398,5 +2398,22 @@
   "Clear Updates": "Clear Updates",
   "Delete all edits from this published playlist": "Delete all edits from this published playlist",
   "Are you sure you want to delete all edits from this published playlist? (You won't be able to undo this action later)": "Are you sure you want to delete all edits from this published playlist? (You won't be able to undo this action later)",
+  "Purchase Your Content": "Purchase Your Content",
+  "Pre-order Your Content": "Pre-order Your Content",
+  "After completing the purchase you will have instant access to your content that doesn't expire.": "After completing the purchase you will have instant access to your content that doesn't expire.",
+  "This content is not available yet but you can pre-order it now so you can access it as soon as it goes live.": "This content is not available yet but you can pre-order it now so you can access it as soon as it goes live.",
+  "Purchase your content for %currency%%amount%": "Purchase your content for %currency%%amount%",
+  "Pre-order your content for %currency%%amount%": "Pre-order your content for %currency%%amount%",
+  "Add a card --[replaces add_a_card]--" : "Add a card",
+  "%add_a_card% to purchase content.": "%add_a_card% to purchase content.",
+  "%add_a_card% to preorder content.": "%add_a_card% to preorder content.",
+  "This content can be purchased for %currency%%amount%": "This content can be purchased for %currency%%amount%",
+  "Thanks for purchasing, enjoy your content!": "Thanks for purchasing, enjoy your content!",
+  "This content is now available, click here to view it": "This content is now available, click here to view it",
+  "Your preordered content is now available, click here to view it": "Your preordered content is now available, click here to view it",
+  "Preorder now for %currency%%amount%": "Preorder now for %currency%%amount%",
+  "You have preordered this content": "You have preordered this content",
+  "You cannot preorder your own content": "You cannot preorder your own content",
+  "You cannot purchase your own content": "You cannot purchase your own content",
   "--end--": "--end--"
 }
