--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2334,6 +2334,8 @@
   "Clear History": "Clear History",
   "Reset homepage to defaults?": "Reset homepage to defaults?",
   "Homepage restored to default.": "Homepage restored to default.",
+  "UNPUBLISHED": "UNPUBLISHED",
+  "EDITED": "EDITED",
   "The transaction timed out, but may have been completed. Please wait a few minutes, then check your wallet transactions before attempting to retry.": "The transaction timed out, but may have been completed. Please wait a few minutes, then check your wallet transactions before attempting to retry.",
   "The transaction timed out, but may have been completed. Please wait a few minutes, then check your wallet transactions before attempting to retry. Note that due to current limitations, we are unable to re-link the tip sent to a new comment.": "The transaction timed out, but may have been completed. Please wait a few minutes, then check your wallet transactions before attempting to retry. Note that due to current limitations, we are unable to re-link the tip sent to a new comment.",
   "Click Check for Replays to update...": "Click Check for Replays to update...",
@@ -2406,6 +2408,20 @@
   "Clear Updates": "Clear Updates",
   "Delete all edits from this published playlist": "Delete all edits from this published playlist",
   "Are you sure you want to delete all edits from this published playlist? (You won't be able to undo this action later)": "Are you sure you want to delete all edits from this published playlist? (You won't be able to undo this action later)",
+  "Featured Channels": "Featured Channels",
+  "Add a list of channels to feature on your homepage!": "Add a list of channels to feature on your homepage!",
+  "Add featured channels": "Add featured channels",
+  "Publish changes": "Publish changes",
+  "No featured channels.": "No featured channels.",
+  "Discard Changes": "Discard Changes",
+  "Discard all changes? The action cannot be undone.": "Discard all changes? The action cannot be undone.",
+  "Featured channels title": "Featured channels title",
+  "Add list title": "Add list title",
+  "Search for channels to add": "Search for channels to add",
+  "Enter channel name or URL": "Enter channel name or URL",
+  "Selected channels": "Selected channels",
+  "Suggest followed channels": "Suggest followed channels",
+  "View full details": "View full details",
   "Purchase Your Content": "Purchase Your Content",
   "Pre-order Your Content": "Pre-order Your Content",
   "After completing the purchase you will have instant access to your content that doesn't expire.": "After completing the purchase you will have instant access to your content that doesn't expire.",
