--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -134,6 +134,7 @@
   "Amount": "Amount",
   "Recipient address": "Recipient address",
   "Send": "Send",
+  "Send --[button to send chat message]--": "Send",
   "Receive Credits": "Receive Credits",
   "Send Credits": "Send Credits",
   "Address copied.": "Address copied.",
@@ -231,6 +232,7 @@
   "Post --[button to submit something]--": "Post",
   "Post --[noun, markdown post tab button]--": "Post",
   "Livestream --[noun, livestream tab button]--": "Livestream",
+  "Livestream Chat": "Livestream Chat",
   "Posting...": "Posting...",
   "Join our Discord": "Join our Discord",
   "Report a bug or suggest something": "Report a bug or suggest something",
@@ -357,6 +359,11 @@
   "Unfollow @%channelName%": "Unfollow @%channelName%",
   "Find assistance": "Find assistance",
   "Email Us": "Email Us",
+  "Email change and account deletion": "Email change and account deletion",
+  "Your Access Token": "Your Access Token",
+  "Authentication Token - do not share, this works like a password!": "Authentication Token - do not share, this works like a password!",
+  "Copied token": "Copied token",
+  "Email address changes and account removal are processed manually on request via email. Email must come from the original email being changed, or we'll need need to verify ownership another way.": "Email address changes and account removal are processed manually on request via email. Email must come from the original email being changed, or we'll need need to verify ownership another way.",
   "Today": "Today",
   "All time": "All time",
   "Share on Reddit": "Share on Reddit",
@@ -1306,6 +1313,7 @@
   "News": "News",
   "Pop Culture": "Pop Culture",
   "Rabbit Hole": "Rabbit Hole",
+  "Spirituality": "Spirituality",
   "Sports": "Sports",
   "Tech": "Tech",
   "Technology": "Technology",
