--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "source-map-explorer": "^2.5.2",
     "tempy": "^0.6.0",
     "tus-js-client": "^2.3.0",
+    "twemoji": "^14.0.2",
     "videojs-contrib-ads": "^6.9.0",
     "videojs-ima": "^1.11.0",
     "videojs-ima-player": "^0.5.6",
