--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2409,7 +2409,8 @@
   "Delete all edits from this published playlist": "Delete all edits from this published playlist",
   "Are you sure you want to delete all edits from this published playlist? (You won't be able to undo this action later)": "Are you sure you want to delete all edits from this published playlist? (You won't be able to undo this action later)",
   "Featured Channels": "Featured Channels",
-  "Add a list of channels to feature on your homepage!": "Add a list of channels to feature on your homepage!",
+  "Setting up Featured Channels is currently an early-access feature available with Odysee Premium.": "Setting up Featured Channels is currently an early-access feature available with Odysee Premium.",
+  "Sign up now to configure on your own channel!": "Sign up now to configure on your own channel!",
   "Add featured channels": "Add featured channels",
   "Publish changes": "Publish changes",
   "No featured channels.": "No featured channels.",
